Migration to jdk 9